# hammerwork

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  MERMAID_EXAMPLE.md  Makefile  README.md  ROADMAP.md  docker-compose.yml  example_retry_strategy.rs  test-mysql-cli.sh
.claude/: settings.local.json
.github/workflows/: integration.yml
cargo-hammerwork/: CHANGELOG.md  Cargo.toml  README.md
cargo-hammerwork/src/: lib.rs  main.rs
cargo-hammerwork/src/commands/: archive.rs  backup.rs  batch.rs  config.rs  cron.rs  job.rs  maintenance.rs  migration.rs  mod.rs  monitor.rs  queue.rs  spawn.rs  streaming.rs  webhook.rs  worker.rs  workflow.rs
cargo-hammerwork/src/config/: mod.rs
cargo-hammerwork/src/utils/: database.rs  db_helpers.rs  display.rs  mod.rs  validation.rs
cargo-hammerwork/tests/: graph_output_format_tests.rs  integration_tests.rs  sql_query_tests.rs  workflow_visualization_tests.rs
config/: init-mysql.sql  init-postgres.sql
docs/: archiving.md  batch-operations.md  cron-scheduling.md  encryption.md  integration-testing.md  job-spawning.md  job-types.md  migrations.md  monitoring.md  priority-system.md  quick-start.md  testing.md  tracing.md  worker-configuration.md  workflows.md
examples/: autoscaling_example.rs  aws_kms_encryption_example.rs  batch_example.rs  cron_example.rs  encryption_example.rs  gcp_kms_encryption_example.rs  key_management_example.rs  mysql_example.rs  postgres_example.rs  priority_example.rs  result_storage_example.rs  retry_strategies.rs  spawn_cli_example.rs  spawn_example.rs  test_queue_example.rs  vault_kms_encryption_example.rs  worker_batch_example.rs
hammerwork-web/: CHANGELOG.md  Cargo.toml  README.md
hammerwork-web/assets/: dashboard.css  dashboard.js  index.html
hammerwork-web/src/: auth.rs  config.rs  lib.rs  main.rs  server.rs  websocket.rs
hammerwork-web/src/api/: archive.rs  jobs.rs  mod.rs  queues.rs  spawn.rs  stats.rs  system.rs
hammerwork-web/tests/: integration_tests.rs
integrations/mysql-integration/: Cargo.toml  Dockerfile
integrations/mysql-integration/src/: main.rs
integrations/postgres-integration/: Cargo.toml  Dockerfile
integrations/postgres-integration/src/: main.rs
integrations/shared/: test_scenarios.rs
scripts/: cleanup.sh  dev.sh  setup-db.sh  setup-test-databases.sh  test-local.sh  test-mysql.sh  test-postgres.sh
src/: alerting.rs  archive.rs  batch.rs  config.rs  cron.rs  encryption.rs  error.rs  events.rs  integration_tests.rs  job.rs  lib.rs  metrics.rs  priority.rs  queue.rs  rate_limit.rs  retry.rs  spawn.rs  stats.rs  streaming.rs  tracing.rs  webhooks.rs  worker.rs  workflow.rs
src/encryption/: engine.rs  key_manager.rs
src/migrations/: 001_initial_schema.mysql.sql  001_initial_schema.postgres.sql  002_add_priority.mysql.sql  002_add_priority.postgres.sql  003_add_timeouts.mysql.sql  003_add_timeouts.postgres.sql  004_add_cron.mysql.sql  004_add_cron.postgres.sql  005_add_batches.mysql.sql  005_add_batches.postgres.sql  006_add_result_storage.mysql.sql  006_add_result_storage.postgres.sql  007_add_dependencies.mysql.sql  007_add_dependencies.postgres.sql  008_add_result_config.mysql.sql  008_add_result_config.postgres.sql  009_add_tracing.mysql.sql  009_add_tracing.postgres.sql  010_add_archival.mysql.sql  010_add_archival.postgres.sql  011_add_encryption.mysql.sql  011_add_encryption.postgres.sql  012_optimize_dependencies.mysql.sql  012_optimize_dependencies.postgres.sql  013_add_key_audit.mysql.sql  013_add_key_audit.postgres.sql  014_add_queue_pause.mysql.sql  014_add_queue_pause.postgres.sql  mod.rs  mysql.rs  postgres.rs
src/queue/: mod.rs  mysql.rs  postgres.rs  test.rs
tests/: archive_tests.rs  batch_tests.rs  comprehensive_archive_tests.rs  cron_test.rs  encryption_basic_tests.rs  encryption_tests.rs  integration_tests.rs  jobarchiver_pool_tests.rs  jobrow_query_tests.rs  priority_tests.rs  result_config_test.rs  result_storage_debug.rs  result_storage_tests.rs  test_queue_tests.rs  test_utils.rs  worker_batch_tests.rs
