[workspace]
members = [
    ".",
    "integrations/postgres-integration",
    "integrations/mysql-integration",
]
resolver = "2"

[workspace.dependencies]
hammerwork = { path = "." }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "chrono", "uuid", "json"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
cron = "0.12"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
tokio-test = "0.4"
rand = "0.8"
prometheus = { version = "0.13" }
reqwest = { version = "0.12", features = ["json"] }
warp = { version = "0.3" }
clap = { version = "4.0", features = ["derive"] }

[package]
name = "hammerwork"
version = "1.0.0"
edition = "2024"
description = "A high-performance, database-driven job queue for Rust with PostgreSQL and MySQL support, featuring job prioritization, cron scheduling, timeouts, rate limiting, Prometheus metrics, alerting, and comprehensive statistics collection"
license = "MIT"
repository = "https://github.com/CodingAnarchy/hammerwork"
authors = ["CodingAnarchy <noreply@codinganarchy.com>"]
homepage = "https://github.com/CodingAnarchy/hammerwork"
documentation = "https://docs.rs/hammerwork"
readme = "README.md"
keywords = ["database", "job-queue", "async", "postgres", "mysql"]
categories = ["database", "asynchronous", "concurrency"]
rust-version = "1.86"

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
cron = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
prometheus = { version = "0.13", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
warp = { version = "0.3", optional = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["metrics", "alerting"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
metrics = ["prometheus", "warp"]
alerting = ["reqwest"]

[dev-dependencies]
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }

[[example]]
name = "postgres_example"
required-features = ["postgres"]

[[example]]
name = "mysql_example"
required-features = ["mysql"]

[[example]]
name = "cron_example"
required-features = ["postgres"]

[[example]]
name = "priority_example"
required-features = ["postgres"]

[[bin]]
name = "cargo-hammerwork"
path = "src/bin/cargo-hammerwork.rs"
