[package]
name = "cargo-hammerwork"
description = "A comprehensive cargo subcommand for managing Hammerwork job queues with advanced tooling and monitoring capabilities"
keywords = ["cargo", "cli", "hammerwork", "job-queue", "database"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[[bin]]
name = "cargo-hammerwork"
path = "src/main.rs"

[dependencies]
hammerwork = { version = "1.0.0", features = ["postgres", "mysql"] }
clap = { workspace = true, features = ["env"] }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "mysql"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
comfy-table = { workspace = true }
indicatif = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
cron = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
tokio-test = { workspace = true }