[package]
name = "hammerwork-web"
description = "Web-based admin dashboard for Hammerwork job queues with real-time monitoring, webhook management, event streaming, and comprehensive job queue administration"
readme = "README.md"
keywords = ["job-queue", "dashboard", "web", "monitoring", "admin"]
categories = ["web-programming", "development-tools", "database"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[[bin]]
name = "hammerwork-web"
path = "src/main.rs"

[dependencies]
# Core Hammerwork functionality
hammerwork = { workspace = true, features = ["postgres", "mysql", "metrics"] }

# Web framework and HTTP
warp = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# CLI and configuration
clap = { workspace = true, features = ["derive"] }
toml = { workspace = true }

# Database
sqlx = { workspace = true, features = ["postgres", "mysql"] }

# Utility
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Authentication (for future use)
bcrypt = { workspace = true, optional = true }
base64 = { workspace = true }

# HTTP client for health checks
reqwest = { workspace = true }

[features]
default = ["postgres"]
postgres = ["hammerwork/postgres", "sqlx/postgres"]
mysql = ["hammerwork/mysql", "sqlx/mysql"]
auth = ["bcrypt"]

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
