[package]
name = "mysql-integration"
description = "MySQL integration tests for Hammerwork job queue"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
hammerwork = { workspace = true, features = ["mysql"] }
tokio = { workspace = true }
sqlx = { workspace = true, features = ["mysql"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }